<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layer_menu"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <ListView
            android:id="@+id/layer_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        </ListView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/layer_add"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#FF888888"
                android:contentDescription="@string/add_layer"
                android:minWidth="48dp"
                android:onClick="addLayerClicked"
                android:src="@drawable/layer_add"/>

            <ImageButton
                android:id="@+id/layer_delete"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#FF888888"
                android:contentDescription="@string/delete_layer"
                android:minWidth="50dp"
                android:onClick="deleteLayerClicked"
                android:src="@drawable/layer_delete"/>

            <ImageButton
                android:id="@+id/layer_up"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#FF888888"
                android:contentDescription="@string/layer_up"
                android:minWidth="50dp"
                android:onClick="layerUpClicked"
                android:src="@drawable/layer_up"/>

            <ImageButton
                android:id="@+id/layer_down"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="#FF888888"
                android:contentDescription="@string/layer_down"
                android:minWidth="50dp"
                android:onClick="layerDownClicked"
                android:src="@drawable/layer_down"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"></LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>